kubernetes/argocd/applications/trodain-editor/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trodain-editor-service
spec:
  selector:
    app: trodain-editor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
